# GRUDGE

./: .gitignore  README.md  pyproject.toml  run.py
.github/workflows/: aggregate.yml
docs/: idea.md  index.html
grudge/: feeds.py  html_builder.py  market.py  rewriter.py  scorer.py  weather.py
tests/: test_dedupe.py  test_html_builder.py  test_rewriter.py  test_scorer.py
